Safari365 Prod/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Referral_Client_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Referral Client Name</description>
        <inlineHelpText>Who Referred this Client to Safari365? Very NB to capture accurately when &quot;Lead Source&quot; is a Client Referral. Do this correctly so that we can thank your Referring Client when this booking confirms.</inlineHelpText>
        <label>Referral Client Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referral_Client_s_Name__c</fullName>
        <label>Referral Client&apos;s Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Competition_Lead_Name__c</fullName>
        <label>Referral Competition Lead Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Roughing_it__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Roughing it</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rwanda__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rwanda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduled_escorted_tours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled escorted tours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Self_drive_tours__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self drive tours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Serengeti_National_Park__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Serengeti National Park</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shark_cage_diving__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shark cage diving</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>South_Africa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>South Africa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spa_and_rejuvenation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spa and rejuvenation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>4-star, good quality, good location mid-range accommodation.</inlineHelpText>
        <label>Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubmitterIP__c</fullName>
        <label>Submitter IP</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <label>Supplier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>South Africa 365</fullName>
                </value>
                <value>
                    <fullName>Safari 365</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tanzania__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tanzania</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>The_Great_Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>The Great Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Participents__c</fullName>
        <label>Total Participants</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Travel_Date_Options__c</fullName>
        <label>Travel Date Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exact</fullName>
                </value>
                <value>
                    <fullName>Flexible within 3 days</fullName>
                </value>
                <value>
                    <fullName>Flexible within 2 weeks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uganda__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uganda</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UnbouncePageID__c</fullName>
        <label>Unbounce Page ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnbouncePageVariant__c</fullName>
        <label>Unbounce Page Variant</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnbounceSubmissionDate__c</fullName>
        <label>Unbounce Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UnbounceSubmissionTime__c</fullName>
        <label>Unbounce Submission Time</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unqualified_Reason__c</fullName>
        <inlineHelpText>It is NB to get this accurate as allows Safari365 to interrogate where to improve. Record any additional information in the &quot;Internal Comments&quot; Set a &quot;New Task&quot; reminder in Salesforce if you are to contact this Client again in the future.</inlineHelpText>
        <label>Unqualified Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&quot;No Thanks&quot; response to email Quote Calculator</fullName>
                </value>
                <value>
                    <fullName>No response to emails/phone calls (send to LN)</fullName>
                </value>
                <value>
                    <fullName>Client booked with another competitor (who/why ?)</fullName>
                </value>
                <value>
                    <fullName>Booking parked - to contact later (send to LN)</fullName>
                </value>
                <value>
                    <fullName>Client Booked with OTA (Detail which OTA in Internal Comments (ie Booking.com, Hotels.com AirB&amp;B etc)</fullName>
                </value>
                <value>
                    <fullName>Client cancelled their travel plans (send to LN)</fullName>
                </value>
                <value>
                    <fullName>Client cancelled their travel plans (send to Lead Nurture)</fullName>
                </value>
                <value>
                    <fullName>Insufficient budget</fullName>
                </value>
                <value>
                    <fullName>Client changed the travel destination (Detail which country they are traveling to?)</fullName>
                </value>
                <value>
                    <fullName>Client already booked</fullName>
                </value>
                <value>
                    <fullName>Other, why? (send to LN)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>3-star, budget orientated clean and comfortable accommodation.</inlineHelpText>
        <label>Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Victoria_Falls__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Victoria Falls</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Walking_Safaris__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Walking Safaris</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_Source_Debug__c</fullName>
        <description>Web Source Debug</description>
        <inlineHelpText>To be Deleted</inlineHelpText>
        <label>Web Source Debug</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Website_origin__c</fullName>
        <inlineHelpText>Which Safari365 website did the client use to find us? (This will drive the Language used to communicate with the client) If unsure, choose &apos;Web: Safari365.com&apos;</inlineHelpText>
        <label>Website Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web: safari365.com</fullName>
                </value>
                <value>
                    <fullName>Web: safari365.com.au</fullName>
                </value>
                <value>
                    <fullName>Web: southafrica365.com</fullName>
                </value>
                <value>
                    <fullName>Web:safari365.com.tur.br</fullName>
                </value>
                <value>
                    <fullName>Web: top5africa.com</fullName>
                </value>
                <value>
                    <fullName>Web: goodsafariguide.com</fullName>
                </value>
                <value>
                    <fullName>Web: safari365.com.cn</fullName>
                </value>
                <value>
                    <fullName>Web: safari365.es</fullName>
                </value>
                <value>
                    <fullName>Web: safari365.de</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Whale_watching__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Whale watching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wildlife_Safaris__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wildlife Safaris</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zambia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zambia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zanzibar_and_Pemba__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zanzibar and Pemba</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iContactforSF__iContact_Contact_Id__c</fullName>
        <description>The iContact Contact Id associated with this lead.</description>
        <label>iContact Contact Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>triggerAutoResponseEmail__c</fullName>
        <label>triggerAutoResponseEmail</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Leads_Unqualified_Mangrs_View</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LeadAge__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>FULL_NAME</columns>
        <columns>Internal_Comments__c</columns>
        <columns>Client_Comments__c</columns>
        <columns>New_Country_of_Residence__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>DaddyAnalytics__DA_Visitor_Landing_Page__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Unqualified</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>notEqual</operation>
            <value>Brain</value>
        </filters>
        <label>All Leads Unqualified (Mngrs View)</label>
        <sharedTo>
            <role>Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Unassigned_LeadsSP</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Client_Comments__c</columns>
        <columns>DaddyAnalytics__DA_Visitor_Landing_Page__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Budget_Total__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Website_origin__c</columns>
        <columns>Arrival_Date__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>Enquiry_Ref_No__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>startsWith</operation>
            <value>Marcus</value>
        </filters>
        <filters>
            <field>Website_origin__c</field>
            <operation>equals</operation>
            <value>Web: safari365.es</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified</value>
        </filters>
        <label>All Unassigned Leads (Spanish)</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>All_Unassigned_Leads_Brazil</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>Website_origin__c</columns>
        <columns>Client_Comments__c</columns>
        <columns>Internal_Comments__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>DaddyAnalytics__DA_Visitor_Landing_Page__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Marcus</value>
        </filters>
        <filters>
            <field>Website_origin__c</field>
            <operation>equals</operation>
            <value>Web:safari365.com.tur.br</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified</value>
        </filters>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>notEqual</operation>
            <value>Newsletter Signup</value>
        </filters>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>8/11/2017 12:00 AM</value>
        </filters>
        <label>Unassigned Leads (Brazil)</label>
        <language>en_US</language>
        <sharedTo>
            <role>Carnival_Kids</role>
            <role>Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Unassigned_Leads_China</fullName>
        <columns>FULL_NAME</columns>
        <columns>Website_origin__c</columns>
        <columns>Client_Comments__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>Arrival_Date__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Budget_Total__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>startsWith</operation>
            <value>Marcus</value>
        </filters>
        <filters>
            <field>Website_origin__c</field>
            <operation>equals</operation>
            <value>Web: safari365.com.cn</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified</value>
        </filters>
        <label>Unassigned Leads (China)</label>
        <language>en_US</language>
        <sharedTo>
            <role>Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Unassigned_Leads_de</fullName>
        <columns>New_Country_of_Residence__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Internal_Comments__c</columns>
        <columns>Client_Comments__c</columns>
        <columns>DaddyAnalytics__DA_Visitor_Landing_Page__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Website_origin__c</columns>
        <columns>Arrival_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>startsWith</operation>
            <value>Marcus</value>
        </filters>
        <filters>
            <field>Website_origin__c</field>
            <operation>equals</operation>
            <value>Web: safari365.de</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified</value>
        </filters>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>notEqual</operation>
            <value>Competition Entry,Newsletter Signup</value>
        </filters>
        <label>All Unassigned Leads (German)</label>
        <language>en_US</language>
        <sharedTo>
            <role>Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Unassigned_Leads_en</fullName>
        <columns>New_Country_of_Residence__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Internal_Comments__c</columns>
        <columns>Client_Comments__c</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Website_origin__c</columns>
        <columns>Arrival_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>startsWith</operation>
            <value>Marcus</value>
        </filters>
        <filters>
            <field>Website_origin__c</field>
            <operation>equals</operation>
            <value>Web: safari365.com</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified</value>
        </filters>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>notEqual</operation>
            <value>Competition Entry,Newsletter Signup</value>
        </filters>
        <label>All Unassigned Leads (English)</label>
        <language>en_US</language>
        <sharedTo>
            <role>Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_of_My_Unqualified_Leads</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Leads_Process__c</columns>
        <columns>New_Country_of_Residence__c</columns>
        <columns>Internal_Comments__c</columns>
        <columns>Client_Comments__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Unqualified</value>
        </filters>
        <label>My Leads (All Unqualified)</label>
    </listViews>
    <listViews>
        <fullName>My_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>New_Country_of_Residence__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>Internal_Comments__c</columns>
        <columns>Client_Comments__c</columns>
        <columns>Leads_Process__c</columns>
        <columns>LeadAge__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified</value>
        </filters>
        <label>My Leads (Currently Active)</label>
    </listViews>
    <listViews>
        <fullName>Unassigned_Leads_All</fullName>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>New_Country_of_Residence__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Website_origin__c</columns>
        <columns>DaddyAnalytics__DA_Visitor_Landing_Page__c</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Client_Comments__c</columns>
        <columns>Internal_Comments__c</columns>
        <columns>LEAD.PHONE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Marcus</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Unqualified</value>
        </filters>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>notEqual</operation>
            <value>Newsletter Signup</value>
        </filters>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>8/11/2017 12:00 AM</value>
        </filters>
        <label>Unassigned Leads (All)</label>
        <sharedTo>
            <role>Management</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Personal</fullName>
        <active>true</active>
        <businessProcess>General</businessProcess>
        <label>Personal</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Referral_Client_Name</fullName>
        <active>true</active>
        <description>When a lead is a Client Referral, the referring clients name must be provided.</description>
        <errorConditionFormula>AND
(ISPICKVAL(  LeadSource , &quot;Client Referral&quot;),ISBLANK( Referral_Client_Name__c ))</errorConditionFormula>
        <errorDisplayField>Referral_Client_Name__c</errorDisplayField>
        <errorMessage>Please provide the clients name as per Salesforce that referred this client (a grift will be sent to him/her should booking occur)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unqualified_Lead</fullName>
        <active>true</active>
        <description>When a lead status is Unqualified, a reason must be given.</description>
        <errorConditionFormula>AND
(ISPICKVAL( Status  , &quot;Unqualified&quot;),ISBLANK( TEXT(Unqualified_Reason__c)  ))</errorConditionFormula>
        <errorDisplayField>Absolute_luxury__c</errorDisplayField>
        <errorMessage>Please provide an Unqualified reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_country_on_convert</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT($User.ByPassValidation__c),
LEN(TEXT( New_Country_of_Residence__c ) )= 0,
 IsConverted 
)</errorConditionFormula>
        <errorDisplayField>New_Country_of_Residence__c</errorDisplayField>
        <errorMessage>Please ensure a Country value is included, if unknown, choose &quot;Other&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_website_origin_on_convert</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
LEN(TEXT( Website_origin__c ) )= 0,
 IsConverted 
)</errorConditionFormula>
        <errorDisplayField>Absolute_luxury__c</errorDisplayField>
        <errorMessage>Please ensure correct a Website Origin value is included.</errorMessage>
    </validationRules>
</CustomObject>